themes/partage-ton-pain/assets/sass/pages/_home.scss
#home {
    #announcement {
        background-color: $main-color;

        p {
            font-size: 90%;
            margin: 0;
            padding: 5px 0;
            text-align: center;
        }
    }

    #hero {
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        border-radius: 0 0 30px 30px;

        .text {
            color: white;
            padding: 75px 20px;

            h1 {
                font-size: 300%;
                line-height: 55px;
                margin-bottom: 0;
            }
            
            p {
                font-size: 150%;
                margin-top: 10px;
                margin-bottom: 30px;
            }
        }
    }
    
    #verse {
        font-size: 120%;
        margin: 20px;

        .text {
            p {
                margin: 0 0 10px 0;
                font-style: italic;
            }
        }

        .reference {
            text-align: right;

            .book {
                font-weight: bold;
            }
        }
    }

    #mission {
        margin: 0 20px;

        .cards {
            display: flex;
            flex-wrap: wrap;

            .card {
                display: flex;
                flex: 1;
                flex-direction: column;
                min-width: 300px;

                .content {
                    border: solid 1px #c1c1c1;
                    border-radius: 5px;
                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
                    min-height: 250px;
                    margin: 40px 5px 5px 5px;
                    padding: 80px 20px 20px 20px;
                }
                .icon {
                    background-color: white;
                    border: solid 1px #c1c1c1;
                    border-radius: 50%;
                    font-size: 40px;
                    height: 60px;
                    margin: auto;
                    margin-bottom: 10px;
                    padding: 5px;
                    text-align: center;
                    width: 60px;
                }
                .header {
                    display: flex;
                    flex-direction: column;
                    margin-top: 10px;
                    margin-bottom: -125px;
                }
                .title {
                    color: $main-color-dark;
                    font-weight: bold;
                    font-size: 150%;
                    text-align: center;
                }
            }
        }
    }
}

